# autocompress-rs

./: .travis.yml  Cargo.toml  README.md  appveyor.yml  create-feature-flag-doc.sh  run-tests.sh
.github/workflows/: build.yml
examples/: autocompress.rs  autocompress_async.rs  autocompress_parallel.rs  autodetect.rs  simplewrite.rs
src/: autodetect.rs  bgzip.rs  bzip2.rs  error.rs  iothread.rs  lib.rs  read.rs  tests.rs  threadio.rs  write.rs  xz.rs  zlib.rs  zstd.rs
src/gzip/: footer.rs  header.rs  mod.rs
src/io/: mod.rs  rayon.rs
src/io/rayon/: additionaltest.rs  mod.rs  parallele_writer.rs  test.rs
src/io/reader/: mod.rs  test.rs
src/io/writer/: mod.rs  test.rs
src/iothread/: block.rs  mod.rs
testfiles/: compress.sh  pg2701.txt.bz2  pg2701.txt.multistream.bz2  pg2701.txt.multistream.xz  pg2701.txt.multistream.zst  pg2701.txt.xz  pg2701.txt.zlib  pg2701.txt.zst  plain.txt  plain.txt.br  plain.txt.bz2  plain.txt.lz4  plain.txt.lzo  plain.txt.xz  plain.txt.zst  sqlite3.c.bz2  sqlite3.c.multistream.bz2  sqlite3.c.multistream.xz  sqlite3.c.multistream.zst  sqlite3.c.xz  sqlite3.c.zlib  sqlite3.c.zst
