[package]
name = "autocompress"
version = "0.2.1"
authors = ["Yasunobu Okamura <okamura@informationsea.info>"]
edition = "2018"
description = "Automatically select suitable decoder from magic bytes or encoder from file extension."
readme = "README.md"
homepage = "https://github.com/informationsea/autocompress-rs"
repository = "https://github.com/informationsea/autocompress-rs"
license = "Apache-2.0"
keywords = ["gzip", "zstd", "bzip2", "compress", "decompress"]
categories = ["compression", "encoding"]
exclude = ["testfiles"]

[badges]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["full"]
full = ["gzip", "snap", "zstd", "bzip2", "lz4", "xz", "brotli", "thread"]
xz = ["xz2"]
gzip = ["flate2"]
thread = ["log", "crossbeam-channel"]
zlib = ["flate2/zlib", "gzip"]
miniz-sys = ["flate2/miniz-sys", "gzip"]

[dependencies]
snap = {version = "1", optional = true}
zstd = {version = "0.9", optional = true}
flate2 = {version = "1", optional = true}
bzip2 = {version = "0.4", optional = true}
lz4 = {version = "1", optional = true}
xz2 = {version = "0.1", optional = true}
brotli = {version = "3", optional = true}

log = {version = "^0.4.14", optional = true}
crossbeam-channel = {version = "0.5", optional = true}

[dev-dependencies]
temp_testdir = "0.2.3"
clap = "^2.33.3"
rand = "0.8.0"
pretty_env_logger = "0.4"
